@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Fix gross in HiTrust notification. Don't use Money object in Verifi gateway [cody]
 * Initial implementation of Payflow Name-Value API [Greg Furmanek]
 * Add support for CyberSource credits [mjuneja]
 
